[package]
authors = ["Tobias Bucher <tobiasbucher5991@gmail.com>"]
name = "dirs"
version = "0.3.1"

description = "A library for querying operating system specific directories"
repository = "https://github.com/tbu-/dirs"
license = "MIT/Apache-2.0"

[[bin]]
doc = false
name = "dirs"

[dependencies.'cfg(windows)'.target]
ole32-sys = "0.2.0"
shell32-sys = "0.1.1"
winapi = "0.2.5"
